--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.16"
+    "mongoose": "^5.0.16",
+    "shortid": "^2.2.8"
   }
 }
